--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "react": "^16.13.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
+    "react-visibility-sensor": "^5.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
