--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "^12.12.29",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-loader-spinner": "^3.1.0",
     "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-loader-spinner": "^3.1.5",
     "react-scripts": "3.4.0",
+    "react-scroll-into-view": "^1.8.0",
     "react-visibility-sensor": "^5.1.1",
     "typescript": "^3.7.5"
   },
